--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,11 @@
 			<artifactId>testng</artifactId>
 			<version>6.9.9</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.0.5</version>
+		</dependency>
 	</dependencies>
 </project>
