--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,18 @@
 			<version>3.8.0</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		
 		
 	</dependencies>
 </project>
