framework code updated

--- a/src/main/resources/TestConfig.properties
+++ b/src/main/resources/TestConfig.properties
@@ -1,3 +1,10 @@
 url=https://opensource-demo.orangehrmlive.com/
 user=Admin
 pswd=admin123
+DB_PORT=15
+DB_SID=SID001
+DB_UID=user-1
+DB_PSWD=pswd-1
+UNIX_PORT=22
+UNIX_ID=UID001
+UNIX_PSWD=Test@123
